# delta

./: .gitignore  LICENSE  README.adoc  README.md
delta/: CMakeLists.txt
delta/include/analyzers/: lexical.h  synsem.h  syntactic.h
delta/include/common/: commands.h  dec_numbers.h  errors.h  help.h  keywords.h  lexical_comp.h  lexical_components.h  math_constants.h  math_functions.h  symbol_table.h
delta/include/io/: io_system.h
delta/include/math/: dec_numbers.h  math_constants.h  math_functions.h
delta/src/: main.c
delta/src/analyzers/: lexical.c  lexical.l  synsem.y  syntactic.c
delta/src/common/: commands.c  dec_numbers.c  errors.c  help.c  keywords.c  lexical_comp.h  lexical_components.c  math_constants.c  math_functions.c  symbol_table.c
delta/src/io/: io_system.c
delta/src/math/: dec_numbers.c  math_constants.c  math_functions.c
delta/test/: regression_no_comments.d  regression_no_escape_no_comments.d
delta/test/dynamic_libraries/: dl_degrees.c  test_dl_1.c  test_dl_2.c
delta/test/lexical_components/: regression.d  regression_fixed.d  regression_w_more_errors.d
delta/test/notebooks/: notebook_1.delta  notebook_2.delta  notebook_3.delta
delta/test/source_files/: regression_fixed.d  regression_w_more_errors.d
docs/: 0_integer_literal_automata_minimized.jff  0_lexical_components
docs/0_lexical_analysis/: automata_literal_floats.jff  automata_literal_floats_minimized.jff  automata_literal_integers.jff  lexical_components_in_regression_d
